resolved code smells and changed colors to button and checkbox